Applied changes for review comments and CI fixes.
Signed-off-by: Utkarsh Bhatt <utkarsh.bhatt@canonical.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -221,7 +221,7 @@ jobs:
       run: ~/actionutils.sh bootstrap_head custom
 
     - name: Setup cluster
-      run: ~/actionutils.sh cluster_nodes
+      run: ~/actionutils.sh cluster_nodes custom
 
     - name: Add 2 OSDs
       run: |
