--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -303,6 +303,13 @@ jobs:
     - name: Enable services on wrk1
       run: ~/actionutils.sh headexec enable_services node-wrk1
 
+    - name: Enable RGW
+      run: ~/actionutils.sh headexec enable_rgw
+
+    - name: Exercise RGW again
+      run: |
+        ~/actionutils.sh testrgw_on_headnode
+
     - name: Test remove node wrk3
       run: |
         set -uex
@@ -434,11 +441,7 @@ jobs:
     - name: Wait until 3 OSDs are up
       run:  ~/actionutils.sh headexec wait_for_osds 3
 
-    - name: Install boto3 on head node.
-      run: |
-        ~/actionutils.sh headexec install_boto3
-
     - name: Exercise RGW again
       run: |
-        ~/actionutils.sh testrgw_on_lxd node-wrk0
+        ~/actionutils.sh testrgw_on_headnode
 
