snap/snapcraft: go build -trimpath
https://go.dev/doc/go1.13#go-command:
> The new go build flag -trimpath removes all file system paths
> from the compiled executable, to improve build reproducibility.

Signed-off-by: Simon Deziel <simon.deziel@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -303,8 +303,8 @@ parts:
           --abbrev=10)
       export MC_VERSION="ceph-version: $pkg_version; microceph-git: $git_version"
       # Build the binaries
-      go build -o "${CRAFT_PART_INSTALL}/bin/microceph" -ldflags "-X 'main.Version=${MC_VERSION}'" ./cmd/microceph
-      go build -o "${CRAFT_PART_INSTALL}/bin/microcephd" -tags=libsqlite3 ./cmd/microcephd
+      go build -trimpath -o "${CRAFT_PART_INSTALL}/bin/microceph" -ldflags "-X 'main.Version=${MC_VERSION}'" ./cmd/microceph
+      go build -trimpath -o "${CRAFT_PART_INSTALL}/bin/microcephd" -tags=libsqlite3 ./cmd/microcephd
     prime:
       - bin/microceph
       - bin/microcephd
