--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -302,6 +302,27 @@ parts:
       - bin/microceph
       - bin/microcephd
 
+  strip:
+    after:
+      - ceph
+      - dqlite
+      - raft
+      - microceph
+    plugin: nil
+    override-prime: |
+      set -x
+
+      # Strip all versions of zfs utils
+      for v in "${CRAFT_PRIME}"/zfs-*; do
+        [ -d "${v}" ] || continue
+        find "${v}/" -type f -exec strip -s {} +
+      done
+
+      # Strip libraries (excluding python3 scripts)
+      find "${CRAFT_PRIME}"/lib -type f \
+        -not -path "${CRAFT_PRIME}/lib/python3/*" \
+        -exec strip -s {} +
+
   wrappers:
     plugin: dump
     source: snapcraft/
