snap/snapcraft: strip microceph{,d} binaries
Signed-off-by: Simon Deziel <simon.deziel@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -295,9 +295,14 @@ parts:
           --dirty \
           --abbrev=10)
       export MC_VERSION="ceph-version: $pkg_version; microceph-git: $git_version"
+
       # Build the binaries
       go build -trimpath -o "${CRAFT_PART_INSTALL}/bin/microceph" -ldflags "-X 'main.Version=${MC_VERSION}'" ./cmd/microceph
       go build -trimpath -o "${CRAFT_PART_INSTALL}/bin/microcephd" -tags=libsqlite3 ./cmd/microcephd
+
+      # Strip binaries
+      strip -s "${CRAFT_PART_INSTALL}/bin/microceph"
+      strip -s "${CRAFT_PART_INSTALL}/bin/microcephd"
     prime:
       - bin/microceph
       - bin/microcephd
