--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo add-apt-repository ppa:dqlite/dev
+          sudo add-apt-repository ppa:dqlite/dev -y --no-update
           sudo apt-get update
           sudo apt-get install -y libdqlite-dev
 
