microceph/Makefile: pin go 1.21 in update-gomod
Signed-off-by: Simon Deziel <simon.deziel@canonical.com>

--- a/microceph/Makefile
+++ b/microceph/Makefile
@@ -38,7 +38,8 @@ endif
 .PHONY: update-gomod
 update-gomod:
 	go get -u ./...
-	go mod tidy
+	go mod tidy --go=1.21
+	go get toolchain@none
 
 # Update lxd-generate generated database helpers.
 .PHONY: update-schema
