Fix: ensure backward compat config
Fixes: #318

Ensure we populate the config key value db with required values if not
present. Newer microceph version set these values on bootstrap, older
releases might be missing them

Also add some testing for ceph.conf

Signed-off-by: Peter Sabaini <peter.sabaini@canonical.com>

--- a/.github/workflows/q2q-candidate-upgrade.yml
+++ b/.github/workflows/q2q-candidate-upgrade.yml
@@ -58,5 +58,8 @@ jobs:
     - name: Wait until 3 OSDs are up
       run:  ~/actionutils.sh headexec wait_for_osds 3
 
+    - name: Verify config
+      run: ~/actionutils.sh test_ceph_conf
+
     - name: Exercise RGW again
       run: ~/actionutils.sh headexec testrgw
