--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -244,16 +244,16 @@ jobs:
       run: ~/actionutils.sh setup_lxd
 
     - name: Create containers with loopback devices
-      run: ~/actionutils.sh create_containers
+      run: ~/actionutils.sh create_containers public
 
     - name: Install local microceph snap
       run: ~/actionutils.sh install_multinode
 
     - name: Bootstrap
-      run: ~/actionutils.sh bootstrap_head custom
+      run: ~/actionutils.sh bootstrap_head public
 
     - name: Setup cluster
-      run: ~/actionutils.sh cluster_nodes custom
+      run: ~/actionutils.sh cluster_nodes public
 
     - name: Verify config
       run: ~/actionutils.sh test_ceph_conf
@@ -333,6 +333,58 @@ jobs:
 
     - name: Test client configurations
       run: ~/actionutils.sh check_client_configs
+
+  multi-node-tests-with-custom-microceph-ip:
+    name: Multi node testing with custom microceph IP
+    runs-on: ubuntu-22.04
+    needs: build-microceph
+    steps:
+    - name: Download snap
+      uses: actions/download-artifact@v3
+      with:
+        name: snaps
+        path: /home/runner
+
+    - name: Checkout code
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    - name: Copy utils
+      run: cp tests/scripts/actionutils.sh $HOME
+
+    - name: Clear FORWARD firewall rules
+      run: ~/actionutils.sh cleaript
+
+    - name: Free disk
+      run: ~/actionutils.sh free_runner_disk
+
+    - name: Install dependencies
+      run: ~/actionutils.sh setup_lxd
+
+    - name: Create containers with loopback devices
+      run: ~/actionutils.sh create_containers internal
+
+    - name: Install local microceph snap
+      run: ~/actionutils.sh install_multinode
+
+    - name: Bootstrap
+      run: ~/actionutils.sh bootstrap_head internal
+
+    - name: Setup cluster
+      run: ~/actionutils.sh cluster_nodes internal
+
+    - name: Add 3 OSDs
+      run: |
+        for c in node-wrk0 node-wrk1 node-wrk2 ; do
+          ~/actionutils.sh add_osd_to_node $c
+        done
+
+    - name: Test 3 osds present
+      run: |
+        set -uex
+        ~/actionutils.sh headexec wait_for_osds 3
+        lxc exec node-wrk0 -- sh -c "microceph.ceph -s"
 
   loop-file-tests:
     name: Test with loopback file OSDs
@@ -472,7 +524,7 @@ jobs:
       run: ~/actionutils.sh setup_lxd
 
     - name: Create containers with loopback devices
-      run: ~/actionutils.sh create_containers
+      run: ~/actionutils.sh create_containers public
 
     - name: Install quincy stable from store
       run: ~/actionutils.sh install_store quincy/stable
