Fix upgrade tests
Add network space

Signed-off-by: Peter Sabaini <peter.sabaini@canonical.com>

--- a/.github/workflows/q2q-candidate-upgrade.yml
+++ b/.github/workflows/q2q-candidate-upgrade.yml
@@ -28,7 +28,7 @@ jobs:
       run: ~/actionutils.sh setup_lxd
 
     - name: Create containers with loopback devices
-      run: ~/actionutils.sh create_containers
+      run: ~/actionutils.sh create_containers public
 
     - name: Install quincy stable from store
       run: ~/actionutils.sh install_store quincy/stable
