Add liblmdb.so for rgw support
RGW requires liblmbdb but this is not staged. Ensure that this
is staged into the snap.

Signed-off-by: Billy Olsen <billy.olsen@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -227,6 +227,7 @@ parts:
       - lib/*/rados-classes
       - lib/*/libtcmalloc.so*
       - lib/*/libunwind.so*
+      - lib/*/liblmdb.so*
       - share/ceph
 
   dqlite:
