abbreviate pkg_version to 10 chars.
Signed-off-by: Utkarsh Bhatt <utkarsh.bhatt@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -144,14 +144,14 @@ parts:
       pkg_version=$(
         dpkg-deb -f \
         $CRAFT_PART_SRC/../stage_packages/ceph-common*.deb \
-        Version | sed -rne 's/([0-9.]+)[-+].*$$/\1/p')
+        Version | sed -rne 's/([0-9.]+)[-+].*$$/\1/p' | cut -c1-10)
       git_version=$(
         git -C $CRAFT_PROJECT_DIR describe \
           --always \
           --dirty \
           --abbrev=10)
         # changed as the original string was longer than 32chars.
-        craftctl set version=${pkg_version}+devel
+        craftctl set version=${pkg_version}+snap${git_version}
     stage-packages:
       - ceph-common
       - ceph-mds
