--- a/microceph/Makefile
+++ b/microceph/Makefile
@@ -38,7 +38,7 @@ endif
 .PHONY: update-gomod
 update-gomod:
 	go get -u ./...
-	go mod tidy --go=1.21
+	go mod tidy
 	go get toolchain@none
 
 # Update lxd-generate generated database helpers.
