--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -103,6 +103,14 @@ apps:
       - network
       - network-bind
 
+  "rbd-mirror":
+    command: commands/rbd-mirror.start
+    daemon: simple
+    install-mode: disable
+    plugs:
+      - network
+      - network-bind
+
   # Commands
   ceph:
     command: commands/ceph
@@ -120,6 +128,7 @@ apps:
       - network
       - block-devices
       - dm-crypt
+      - home
   rbd:
     command: commands/rbd
     plugs:
@@ -167,6 +176,8 @@ parts:
       - ceph-mon
       - ceph-osd
       - radosgw
+      - rbd-mirror
+      # Utilities
       - coreutils
       - uuid-runtime
       - python3-setuptools
@@ -189,6 +200,7 @@ parts:
       - bin/rados
       - bin/radosgw
       - bin/radosgw-admin
+      - bin/rbd-mirror
       - bin/truncate
       - bin/uuidgen
       - lib/*/ceph
