Added remote remove
Signed-off-by: Utkarsh Bhatt <utkarsh.bhatt@canonical.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -696,3 +696,6 @@ jobs:
 
     - name: Verify Remote authentication
       run: ~/actionutils.sh remote_perform_remote_ops_check
+
+    - name: Verify Remote removal
+      run: ~/actionutils.sh remote_remove_and_verify
