--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -241,7 +241,7 @@ parts:
       - lib/*/librdmacm.so*
       - lib/*/libroken.so*
       - lib/*/librtmp.so*
-      - lib/*/libsasl2.so*
+      - lib/*/sasl2/*
       - lib/*/libsnappy.so*
       - lib/*/libwind.so*
       - lib/python3
