Pass state as interface
Signed-off-by: Utkarsh Bhatt <utkarsh.bhatt@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -241,7 +241,7 @@ parts:
       - lib/*/librdmacm.so*
       - lib/*/libroken.so*
       - lib/*/librtmp.so*
-      - lib/*/sasl2/*.so*
+      - lib/*/libsasl2.so*
       - lib/*/libsnappy.so*
       - lib/*/libwind.so*
       - lib/python3
