Added python3-onelogin-saml2 to stage-packages in snapcraft.yaml

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -170,6 +170,7 @@ parts:
       - coreutils
       - uuid-runtime
       - python3-setuptools
+      - python3-onelogin-saml2
     organize:
       usr/bin/: bin/
       usr/sbin/: bin/
