--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -317,8 +317,8 @@ parts:
       export MC_VERSION="ceph-version: $pkg_version; microceph-git: $git_version"
 
       # Build the binaries
-      go build -trimpath -o "${CRAFT_PART_INSTALL}/bin/microceph" -ldflags "-X 'main.Version=${MC_VERSION}'" ./cmd/microceph
-      go build -trimpath -o "${CRAFT_PART_INSTALL}/bin/microcephd" -tags=libsqlite3 ./cmd/microcephd
+      go build -trimpath -o "${CRAFT_PART_INSTALL}/bin/microceph" -ldflags "-X 'github.com/canonical/microceph/microceph/version.version=${MC_VERSION}'" ./cmd/microceph
+      go build -trimpath -o "${CRAFT_PART_INSTALL}/bin/microcephd" -tags=libsqlite3 -ldflags "-X 'github.com/canonical/microceph/microceph/version.version=${MC_VERSION}'" ./cmd/microcephd
 
       # Strip binaries
       strip -s "${CRAFT_PART_INSTALL}/bin/microceph"
