--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -214,10 +214,13 @@ jobs:
         sudo microceph.ceph osd pool create mypool
         sudo microceph pool set-rf --size 1 ""
         sudo microceph.ceph config get osd.1 osd_pool_default_size | fgrep -x "1"
+        sudo microceph pool list | fgrep "mypool" | fgrep -q " 3 "
         sudo microceph pool set-rf --size 3 mypool
         sudo microceph.ceph osd pool get mypool size | fgrep -x "size: 3"
+        sudo microceph pool list | fgrep "mypool" | fgrep -q " 3 "
         sudo microceph pool set-rf --size 1 "*"
         sudo microceph.ceph osd pool get mypool size | fgrep -x "size: 1"
+        sudo microceph pool list | fgrep "mypool" | fgrep -q " 1 "
 
     - name: Test log operations
       run: |
