Fix CI test name
Signed-off-by: Utkarsh Bhatt <utkarsh.bhatt@canonical.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -655,7 +655,7 @@ jobs:
       run: ~/actionutils.sh testrgw "newFile"
 
   replication-tests:
-    name: Test MicroCeph Cluster features.
+    name: Test MicroCeph Remote Replication features.
     runs-on: ubuntu-22.04
     needs: build-microceph
     steps:
