MicroCeph Remote Replication (1/3): Remote Awareness (#405)
# Description
This PR implements the "Making MicroCeph aware of remote cluster"
segment of Remote Replication requirement.
It includes:
1. Cluster Export: Command/API to export ceph cluster state.
2. Remote Import: Command/API to import a remote MicroCeph cluster in
MicroCeph.
3. Remote List: Command/API to list all remotes configured on the
cluster.
4. Remotes Table: To persist localCluster-remoteCluster pair in Dqlite.
5. RBD-Mirror: Daemon enablement using service placement interface.
6. Tests
7. Documentation


## Type of change

Please delete options that are not relevant.

- [ ] Bug fix (non-breaking change which fixes an issue)
- [x] New feature (non-breaking change which adds functionality)
- [ ] Breaking change (fix or feature that would cause existing
functionality to not work as expected)
- [ ] CleanCode (Code refactor, test updates, does not introduce
functional changes)
- [ ] Documentation update (Doc only change)

## How Has This Been Tested?
 - [x] Add CI tests

## Contributor's Checklist

Please check that you have:

- [x] self-reviewed the code in this PR.
- [x] added code comments, particularly in hard-to-understand areas.
- [x] updated the user documentation with corresponding changes.
- [x] added tests to verify effectiveness of this change.

---------

Signed-off-by: Utkarsh Bhatt <utkarsh.bhatt@canonical.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -653,3 +653,49 @@ jobs:
 
     - name: Exercise RGW again
       run: ~/actionutils.sh testrgw "newFile"
+
+  replication-tests:
+    name: Test MicroCeph Remote Replication features.
+    runs-on: ubuntu-22.04
+    needs: build-microceph
+    steps:
+    - name: Download snap
+      uses: actions/download-artifact@v3
+      with:
+        name: snaps
+        path: /home/runner
+
+    - name: Checkout code
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    - name: Copy utils
+      run: cp tests/scripts/actionutils.sh $HOME
+
+    - name: Clear FORWARD firewall rules
+      run: ~/actionutils.sh cleaript
+
+    - name: Free disk
+      run: ~/actionutils.sh free_runner_disk
+
+    - name: Install dependencies
+      run: ~/actionutils.sh setup_lxd
+
+    - name: Create containers with loopback devices
+      run: ~/actionutils.sh create_containers public
+
+    - name: Install local microceph snap
+      run: ~/actionutils.sh install_multinode
+
+    - name: Bootstrap
+      run: ~/actionutils.sh remote_simple_bootstrap_two_sites
+
+    - name: Exchange Cluster tokens
+      run: ~/actionutils.sh remote_exchange_site_tokens
+
+    - name: Verify Remote authentication
+      run: ~/actionutils.sh remote_perform_remote_ops_check
+
+    - name: Verify Remote removal
+      run: ~/actionutils.sh remote_remove_and_verify
