Added support to perform cluster promotion/demotion
Signed-off-by: Utkarsh Bhatt <utkarsh.bhatt@canonical.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -718,6 +718,9 @@ jobs:
     - name: Verify RBD mirror
       run : ~/actionutils.sh remote_verify_rbd_mirroring
 
+    - name: Failover site A to Site B
+      run : ~/actionutils.sh remote_failover_to_siteb
+
     - name: Disable RBD mirror
       run : ~/actionutils.sh remote_disable_rbd_mirroring
 
