--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -700,6 +700,9 @@ jobs:
     - name: Configure RBD mirror
       run : ~/actionutils.sh remote_configure_rbd_mirroring
 
+    - name: Wait for RBD mirror to sync images
+      run : ~/actionutils.sh remote_wait_for_secondary_to_sync
+
     - name: Verify RBD mirror
       run : ~/actionutils.sh remote_verify_rbd_mirroring
 
