MicroCeph Remote Replication (2/3): RBD Mirroring (#437)
# Description
Adds implementation for enabling/disabling rbd mirroring (remote
replication) to a configured MicroCeph remote cluster.

## Type of change

Please delete options that are not relevant.

- [ ] Bug fix (non-breaking change which fixes an issue)
- [X] New feature (non-breaking change which adds functionality)
- [ ] Breaking change (fix or feature that would cause existing
functionality to not work as expected)
- [ ] CleanCode (Code refactor, test updates, does not introduce
functional changes)
- [X] Documentation update (Contains Doc change)

## How Has This Been Tested?
- [X] CI Tests
- [X] Unit Tests

## Contributor's Checklist

Please check that you have:

- [ ] self-reviewed the code in this PR.
- [X] added code comments, particularly in hard-to-understand areas.
- [X] updated the user documentation with corresponding changes.
- [X] added tests to verify effectiveness of this change.

---------

Signed-off-by: Utkarsh Bhatt <utkarsh.bhatt@canonical.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -706,5 +706,20 @@ jobs:
     - name: Verify Remote authentication
       run: ~/actionutils.sh remote_perform_remote_ops_check
 
+    - name: Enable RBD Mirror Daemon
+      run : ~/actionutils.sh remote_enable_rbd_mirror_daemon
+
+    - name: Configure RBD mirror
+      run : ~/actionutils.sh remote_configure_rbd_mirroring
+
+    - name: Wait for RBD mirror to sync images
+      run : ~/actionutils.sh remote_wait_for_secondary_to_sync
+
+    - name: Verify RBD mirror
+      run : ~/actionutils.sh remote_verify_rbd_mirroring
+
+    - name: Disable RBD mirror
+      run : ~/actionutils.sh remote_disable_rbd_mirroring
+
     - name: Verify Remote removal
       run: ~/actionutils.sh remote_remove_and_verify
