Fix: add python3-packaging
For prometheus

Signed-off-by: Peter Sabaini <peter.sabaini@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -181,6 +181,7 @@ parts:
       - coreutils
       - uuid-runtime
       - python3-setuptools
+      - python3-packaging
     organize:
       usr/bin/: bin/
       usr/sbin/: bin/
