Test: upgrade update
Signed-off-by: Peter Sabaini <peter.sabaini@canonical.com>

--- a/.github/workflows/r2s-edge-upgrade.yaml
+++ b/.github/workflows/r2s-edge-upgrade.yaml
@@ -60,5 +60,8 @@ jobs:
     - name: Verify config
       run: ~/actionutils.sh test_ceph_conf
 
+    - name: Verify health
+      run:  ~/actionutils.sh headexec verify_health
+
     - name: Exercise RGW again
       run: ~/actionutils.sh headexec testrgw
